Tools/DumpRenderTree/win/AccessibilityControllerWin.cpp
@@ -67,7 +67,7 @@ AccessibilityController::~AccessibilityController()
 AccessibilityUIElement AccessibilityController::elementAtPoint(int x, int y)
 {
     // FIXME: implement
-    return 0;
+    return { nullptr };
 }
 
 static COMPtr<IAccessibleComparable> comparableObject(const COMPtr<IServiceProvider>& serviceProvider)
@@ -123,7 +123,7 @@ AccessibilityUIElement AccessibilityController::accessibleElementById(JSStringRe
     if (result)
         return AccessibilityUIElement(result);
 
-    return 0;
+    return { nullptr };
 }
 
 AccessibilityUIElement AccessibilityController::focusedElement()
@@ -132,7 +132,7 @@ AccessibilityUIElement AccessibilityController::focusedElement()
 
     _variant_t vFocus;
     if (FAILED(rootAccessible->get_accFocus(&vFocus.GetVARIANT())))
-        return nullptr;
+        return { nullptr };
 
     if (V_VT(&vFocus) == VT_I4) {
         ASSERT(V_I4(&vFocus) == CHILDID_SELF);
@@ -149,15 +149,15 @@ AccessibilityUIElement AccessibilityController::rootElement()
 {
     COMPtr<IWebView> view;
     if (FAILED(frame->webView(&view)))
-        return 0;
+        return { nullptr };
 
     COMPtr<IWebViewPrivate2> viewPrivate(Query, view);
     if (!viewPrivate)
-        return 0;
+        return { nullptr };
 
     HWND webViewWindow;
     if (FAILED(viewPrivate->viewWindow(&webViewWindow)))
-        return 0;
+        return { nullptr };
 
     // Make sure the layout is up to date, so we can find all accessible elements.
     COMPtr<IWebFramePrivate> framePrivate(Query, frame);
@@ -168,7 +168,7 @@ AccessibilityUIElement AccessibilityController::rootElement()
     // WebView's window.
     COMPtr<IAccessible> rootAccessible;
     if (FAILED(AccessibleObjectFromWindow(webViewWindow, static_cast<DWORD>(OBJID_CLIENT), __uuidof(IAccessible), reinterpret_cast<void**>(&rootAccessible))))
-        return 0;
+        return { nullptr };
 
     return rootAccessible;
 }
